Header Footer Commit

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -6,7 +6,12 @@
 </head>
 <body>
 
-   꾸꾸루삥뿡
+{% include 'header.html' %}
+
+<div style = "background-color: green; height: 30rem; border-radius: 3rem; margin: 2rem;"></div>
+
+<div style = "background-color: green; height: 15rem; border-radius: 3rem; margin: 2rem;"></div>
+
 
 </body>
 </html>
