--- a/Templates/base.html
+++ b/Templates/base.html
@@ -8,9 +8,10 @@
 
 {% include 'header.html' %}
 
-<div style = "background-color: green; height: 30rem; border-radius: 3rem; margin: 2rem;"></div>
+{% block content %}
+{% endblock %}
 
-<div style = "background-color: green; height: 15rem; border-radius: 3rem; margin: 2rem;"></div>
+{% include 'footer.html' %}
 
 
 </body>
