--- a/Templates/header.html
+++ b/Templates/header.html
@@ -1,1 +1,14 @@
-<div style = "background-color: green; height: 15rem; border-radius: 3rem; margin: 2rem;"></div>
+<div style="text-align: center;" xmlns:font-family="http://www.w3.org/1999/xhtml">
+
+    <div>
+        <h1 style ="font-family: 'Gowun Batang', serif;"> STELLUP</h1>
+    </div>
+    <div style = "font-family: 'Gowun Batang', serif;
+font-family: 'IBM Plex Sans KR', sans-serif;">
+         <span>nav1</span>
+         <span>nav2</span>
+         <span>nav3</span>
+         <span>nav4</span>
+    </div>
+
+</div>
