--- a/Templates/footer.html
+++ b/Templates/footer.html
@@ -1,11 +1,11 @@
 <div style ="text-align: center;">
-    <div style = "font-family: 'Gowun Batang', serif;
+    <div class = "my-4" style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
         <span>스텔업 소개</span>
         <span>이용 안내</span>
         <span>Contact Us</span>
     </div>
     <div>
-        <h4 style = "font-family: 'Gowun Batang', serif;">STELLUP</h4>
+        <h4 class ="my-4" style = "font-family: 'Gowun Batang', serif;">STELLUP</h4>
     </div>
 </div>
