--- a/Templates/header.html
+++ b/Templates/header.html
@@ -1,9 +1,9 @@
 <div style="text-align: center;" xmlns:font-family="http://www.w3.org/1999/xhtml">
 
     <div>
-        <h1 style ="font-family: 'Gowun Batang', serif;"> STELLUP</h1>
+        <h1 class="my-5" style ="font-family: 'Gowun Batang', serif;"> STELLUP</h1>
     </div>
-    <div style = "font-family: 'Gowun Batang', serif;
+    <div class = "mb-4" style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
          <span>nav1</span>
          <span>nav2</span>
