Bootstrap update Commit

--- a/Templates/footer.html
+++ b/Templates/footer.html
@@ -1,5 +1,5 @@
 <div style ="text-align: center;">
-    <div class = "my-4" style = "font-family: 'Gowun Batang', serif;
+    <div class = "mt-4" style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
         <span>스텔업 소개</span>
         <span>이용 안내</span>
