--- a/Accountapp/Templates/accountapp/Hello_World.html
+++ b/Accountapp/Templates/accountapp/Hello_World.html
@@ -2,12 +2,16 @@
 
 {% block content %}
 
-<div style = "background-color: orange; height: 30rem; border-radius: 3rem; margin: 2rem; font-size =20">
+<div style = "text-align: center">
 
-      <div style = "display: inline-block; background-color : red; margin:1rem; height: 64px; width: 64px;"></div>
-      <div style = "display: inline-block; background-color : red; margin:1rem; height: 4em; width: 4em;"></div>
-      <div style = "display: inline-block; background-color : red; margin:1rem; height: 4rem; width: 4rem;"></div>
-      <div style = "display: inline-block; background-color : red; margin:1rem; height: 30%; width: 30%;"></div>
+      <h2 style = "font-family: 'Gowun Batang', serif;
+font-family: 'IBM Plex Sans KR', sans-serif;">
+      Registration
+      </h2>
+
+      <div>
+            {{ temp }}
+      </div>
 
 </div>
 
