--- a/Accountapp/Templates/accountapp/Hello_World.html
+++ b/Accountapp/Templates/accountapp/Hello_World.html
@@ -2,16 +2,48 @@
 
 {% block content %}
 
-<div style = "text-align: center">
+<div style = "text-align: center; background-color : #F5DA81; border-radius: 5%;">
 
       <h2 style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
       Registration
       </h2>
 
-      <div>
+      <div class = "my-4">
+            <form action="/accounts/hello_world/" method ="post">
+                  {% csrf_token %}
+                  <div class="row g-2", style = "max-width: 500px; margin: auto;">
+  <div class="col-md">
+    <div class="form-floating">
+      <input type="email" name = "Email" class="form-control" id="floatingInputGrid" placeholder="name@example.com" value="mdo@example.com">
+      <label for="floatingInputGrid">Email address</label>
+    </div>
+  </div>
+</div>
+                  <button style = "font-family: 'Gowun Batang', serif;
+font-family: 'Hahmlet', serif;
+font-family: 'IBM Plex Sans KR', sans-serif;" type = "summit" class ="btn btn-outline-secondary rounded-pill px-4 my-5">
+                        제출하기
+                  </button>
+            </form>
+      </div>
+
+      <div style = "font-family: 'Gowun Batang', serif;
+font-family: 'IBM Plex Sans KR', sans-serif;">
             {{ temp }}
       </div>
+
+    <div>
+        {% for reg in reg_all %}
+
+        <p>
+            {{ reg.email }}
+        </p>
+
+        {% endfor %}
+    </div>
+
+
 
 </div>
 
