design update Commit

--- a/Templates/head.html
+++ b/Templates/head.html
@@ -11,3 +11,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Hahmlet:wght@300&family=IBM+Plex+Sans+KR:wght@200&display=swap" rel="stylesheet">
+
+<style>
+    a {
+    color: black; text-decoration : none
+    }
+
+    a:hover {
+    color:black;
+    }
+</style>
+
