--- a/Templates/header.html
+++ b/Templates/header.html
@@ -5,10 +5,29 @@
     </div>
     <div class = "mb-4" style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
-         <span>nav1</span>
-         <span>nav2</span>
-         <span>nav3</span>
-         <span>nav4</span>
+         <span>선생님 소개 &nbsp;&nbsp;&nbsp;&nbsp;</span>
+         <span>스텔업은? &nbsp;&nbsp;&nbsp;&nbsp;</span>
+         <span>안내 &nbsp;&nbsp;&nbsp;&nbsp;</span>
+        {% if user.is_authenticated %}
+        <span>
+            <a href="{% url 'accountapp:logout' %}">
+            Logout
+            </a>
+        </span>
+
+        {% else %}
+        <span>
+            <a href="{% url 'accountapp:login' %}">
+            Login &nbsp;&nbsp;&nbsp;&nbsp;
+            </a>
+        </span>
+        <span>
+            <a href="{% url 'accountapp:create' %}">
+            회원가입
+            </a>
+        </span>
+
+        {% endif %}
     </div>
 
 </div>
