detail view update Commit

--- a/Accountapp/Templates/accountapp/Hello_World.html
+++ b/Accountapp/Templates/accountapp/Hello_World.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div style = "text-align: center; background-color : #F5DA81; border-radius: 5%;">
+<div style = "text-align: center; background-color : #FBEFEF; border-radius: 6px; margin: 0px 500px;" >
 
       <h2 style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
