--- a/Templates/header.html
+++ b/Templates/header.html
@@ -10,6 +10,11 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
          <span>안내 &nbsp;&nbsp;&nbsp;&nbsp;</span>
         {% if user.is_authenticated %}
         <span>
+            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+            My page &nbsp;&nbsp;&nbsp;&nbsp;
+            </a>
+        </span>
+        <span>
             <a href="{% url 'accountapp:logout' %}">
             Logout
             </a>
