--- a/Accountapp/Templates/accountapp/detail.html
+++ b/Accountapp/Templates/accountapp/detail.html
@@ -9,22 +9,44 @@
 
     <div class = "my-5", style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
+        <div>
+            <img src="{{ target_user.profile.image.url }}" alt="이미지가 업로드 되지 않았습니다"
+            style = "height: 15rem; width: 15rem; border-radius: 100rem;">
+        </div>
+        {% if target_user.profile %}
         <h1>
             {{ target_user.profile.nickname }}
         </h1>
+        {{ target_user.profile.message }}
+        {% elif target_user == user %}
+        <a href="{% url 'profileapp:create' %}">
+            <h1>
+                프로필 만들기
+            </h1>
+        </a>
+        {% else %}
+        <h1>
+            Unknown
+        </h1>
+        {% endif %}
     </div>
-
     <div style = "max-width: 900px; margin: auto; font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
-        {{ target_user.date_joined }}
 
         {% if user == target_user %}
         <div>
             <a href="{% url 'accountapp:update' pk=target_user.pk %}">
             <div class="btn btn-warning rounded-pill px-5 my-5">
-                Update
+                개인정보 수정하기
             </div>
             </a>
+            {% if target_user.profile %}
+            <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+            <div class="btn btn-warning rounded-pill px-5 my-5">
+                프로필 수정하기
+            </div>
+            </a>
+            {% endif %}
         </div>
         {% endif %}
     </div>
