--- a/articleapp/templates/articleapp/temp.html
+++ b/articleapp/templates/articleapp/temp.html
@@ -2,9 +2,92 @@
 
 {% block content %}
 
+
+<style>
+
+    .container div {
+  width: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+}
+
+    .container img{
+    width:100%;
+    border-radius: 0.5rem;
+    }
+
+
+</style>
+
 <div>
-    <h1>TEMP</h1>
+
+    <div class="container">
+      <div class="item1">
+          <img src="https://picsum.photos/200/310"  alt ="">
+      </div>
+      <div class="item2">
+          <img src="https://picsum.photos/200/150"  alt ="">
+      </div>
+      <div class="item3">
+          <img src="https://picsum.photos/200/200"  alt ="">
+      </div>
+      <div class="item4">
+          <img src="https://picsum.photos/200/320"  alt ="">
+      </div>
+      <div class="item5">
+          <img src="https://picsum.photos/200/300"  alt ="">
+      </div>
+      <div class="item6">
+          <img src="https://picsum.photos/200/330"  alt ="">
+      </div>
+      <div class="item7">
+          <img src="https://picsum.photos/200/180"  alt ="">
+      </div>
+      <div class="item8">
+          <img src="https://picsum.photos/200/220"  alt ="">
+      </div>
+      <div class="item9">
+          <img src="https://picsum.photos/200/210"  alt ="">
+      </div>
+      <div class="item10">
+          <img src="https://picsum.photos/200/280"  alt ="">
+      </div>
+      <div class="item11">
+          <img src="https://picsum.photos/200/170"  alt ="">
+      </div>
+      <div class="item12">
+          <img src="https://picsum.photos/200/285"  alt ="">
+      </div>
+      <div class="item13">
+          <img src="https://picsum.photos/200/275"  alt ="">
+      </div>
+    </div>
+
 </div>
+
+<script src="https://unpkg.com/magic-grid/dist/magic-grid.cjs.js"></script>
+<script>
+    let magicGrid = new MagicGrid({
+      container: '.container',
+      animate: true,
+      gutter: 30,
+      static: true,
+      useMin: true
+    });
+
+    magicGrid.listen();
+
+    var masonrys = document.getElementsByTagName("img")
+
+for (let i = 0; i < masonrys.length; i++) {
+  masonrys[i].addEventListener('load', function () {
+    magicGrid.positionItems();
+  }, false)
+}
+</script>
 
 
 {% endblock %}
+
