article update button update Commit

--- a/Accountapp/Templates/accountapp/detail.html
+++ b/Accountapp/Templates/accountapp/detail.html
@@ -51,6 +51,13 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
         {% endif %}
     </div>
 
+    <div>
+        <a href="{% url 'articleapp:create' %}"
+        class="btn btn-primary rounded-pill px-5 my-5">
+            게시글 작성하기
+        </a>
+    </div>
+
 
 </div>
 {% endblock %}
