--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -19,12 +19,23 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
 font-family: 'IBM Plex Sans KR', sans-serif;">
 
         <div>
-            <img src ="{{target_article.image.url }}" alt ="">
+            <img style = "max-width: 500px" src ="{{target_article.image.url }}" alt ="">
         </div>
         <div>
             {{ target_article.content }}
         </div>
-    </divstyle>
+
+        {% if user == target_article.writer %}
+        <div>
+            <a href="{% url 'articleapp:update' pk=target_article.pk %}"
+            class="btn btn-secondary rounded-pill px-5 my-5">
+                게시글 수정하기
+            </a>
+        </div>
+        {% endif %}
+    </div>
+
+
 
 
 </div>
