article update Commit

--- a/Templates/header.html
+++ b/Templates/header.html
@@ -1,13 +1,15 @@
 <div style="text-align: center;" xmlns:font-family="http://www.w3.org/1999/xhtml">
 
     <div>
-        <h1 class="my-5" style ="font-family: 'Gowun Batang', serif;"> STELLUP</h1>
+        <a href="{% url 'home' %}">
+        <h1 class="my-5" style ="font-family: 'Gowun Batang', serif;"> 우리가족 사진첩</h1>
+        </a>
     </div>
     <div class = "mb-4" style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
          <span>
-             <a href="{% url 'articleapp:temp' %}">
-                 선생님 소개 &nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="{% url 'home' %}">
+                 추억폴더 &nbsp;&nbsp;&nbsp;&nbsp;
              </a>
          </span>
          <span>스텔업은? &nbsp;&nbsp;&nbsp;&nbsp;</span>
