--- a/Accountapp/Templates/accountapp/detail.html
+++ b/Accountapp/Templates/accountapp/detail.html
@@ -53,7 +53,9 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
 
     <div>
         <a href="{% url 'articleapp:create' %}"
-        class="btn btn-primary rounded-pill px-5 my-5">
+        class="btn btn-primary rounded-pill px-5 my-5"
+        style = "font-family: 'Gowun Batang', serif;
+font-family: 'IBM Plex Sans KR', sans-serif;">
             게시글 작성하기
         </a>
     </div>
