--- a/articleapp/templates/articleapp/create.html
+++ b/articleapp/templates/articleapp/create.html
@@ -5,10 +5,10 @@
 {% block content %}
 
 
-<div class = "my-5 text-center">
-
-    <div class = "my-5", style = "font-family: 'Gowun Batang', serif;
+<div class = "my-5 text-center" style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
+
+    <div class = "my-5"></div>
         <h1>
             게시글 작성하기
         </h1>
