--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -6,23 +6,42 @@
 {% block content %}
 
 
-<div class = "my-5 text-center">
-
-    <div class = "my-5", style = "font-family: 'Gowun Batang', serif;
+<div class = "my-5 text-center" style = "font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
+
+    <div class = "my-5">
         <h1>
             {{ target_article.title }}
         </h1>
+        <p>
+            {{ target_article.created_at }}
+        </p>
     </div>
+
+    <div>
+        <span style="color: #f77" class="material-symbols-outlined">
+cruelty_free
+</span><span style="vertical-align: top",>좋아요 : {{ target_article.like }}</span>
+    </div>
+    <div class ="my-5">
+        <a href="{% url 'accountapp:detail' pk=target_article.writer.pk %}">
+        <img style="width: 2.5rem; height: 2.5rem; objet-fit: cover;
+                    border-radius: 50%;"
+             src="{{ target_article.writer.profile.image.url }} " alt=" ">
+        <span class ="mx-2"> {{ target_article.writer.profile.nickname }} </span>
+        </a>
+    </div>
+
+    <hr class ="my-5">
 
     <div style = "max-width: 900px; margin: auto; font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
 
         <div>
-            <img style = "max-width: 500px" src ="{{target_article.image.url }}" alt ="">
+            <img style = "max-width: 500px; border-radius: 2rem;" src ="{{target_article.image.url }}" alt ="">
         </div>
         <div>
-            {{ target_article.content }}
+            {{ target_article.content|linebreaks }}
         </div>
 
         {% if user == target_article.writer %}
@@ -30,6 +49,10 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
             <a href="{% url 'articleapp:update' pk=target_article.pk %}"
             class="btn btn-secondary rounded-pill px-5 my-5">
                 게시글 수정하기
+            </a>
+            <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
+            class="btn btn-danger rounded-pill px-5 my-5">
+                게시글 삭제
             </a>
         </div>
         {% endif %}
