commentapp update Commit

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -62,6 +62,17 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
             </a>
         </div>
         {% endif %}
+
+
+        <hr class="my-5">
+
+        <div class = "text-start">
+            <h3>
+            댓글달기
+            </h3>
+            {%include 'commentapp/create.html' %}
+        </div>
+
     </div>
 
 
