--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 
 {% load bootstrap4 %}
@@ -6,10 +5,10 @@
 {% block content %}
 
 
-<div class = "my-5 text-center" style = "font-family: 'Gowun Batang', serif;
+<div class="my-5 text-center" style="font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
 
-    <div class = "my-5">
+    <div class="my-5">
         <h1>
             {{ target_article.title }}
         </h1>
@@ -21,15 +20,15 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
     <div>
         <span style="color: #f77" class="material-symbols-outlined">
 cruelty_free
-</span><span style="vertical-align: top",>좋아요 : {{ target_article.like }}</span>
+</span><span style="vertical-align: top" ,>좋아요 : {{ target_article.like }}</span>
     </div>
-    <div class ="my-5">
+    <div class="my-5">
         {% if target_article.writer %}
         <a href="{% url 'accountapp:detail' pk=target_article.writer.pk %}">
-        <img style="width: 2.5rem; height: 2.5rem; objet-fit: cover;
+            <img style="width: 2.5rem; height: 2.5rem; objet-fit: cover;
                     border-radius: 50%;"
-             src="{{ target_article.writer.profile.image.url }} " alt=" ">
-        <span class ="mx-2"> {{ target_article.writer.profile.nickname }} </span>
+                 src="{{ target_article.writer.profile.image.url }} " alt=" ">
+            <span class="mx-2"> {{ target_article.writer.profile.nickname }} </span>
         </a>
         {% else %}
         <h6>
@@ -38,13 +37,13 @@ cruelty_free
         {% endif %}
     </div>
 
-    <hr class ="my-5">
+    <hr class="my-5">
 
-    <div style = "max-width: 900px; margin: auto; font-family: 'Gowun Batang', serif;
+    <div style="max-width: 900px; margin: auto; font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
 
         <div>
-            <img style = "max-width: 500px; border-radius: 2rem;" src ="{{target_article.image.url }}" alt ="">
+            <img style="max-width: 500px; border-radius: 2rem;" src="{{target_article.image.url }}" alt="">
         </div>
         <div>
             {{ target_article.content|linebreaks }}
@@ -53,11 +52,11 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
         {% if user == target_article.writer %}
         <div>
             <a href="{% url 'articleapp:update' pk=target_article.pk %}"
-            class="btn btn-secondary rounded-pill px-5 my-5">
+               class="btn btn-secondary rounded-pill px-5 my-5">
                 게시글 수정하기
             </a>
             <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
-            class="btn btn-danger rounded-pill px-5 my-5">
+               class="btn btn-danger rounded-pill px-5 my-5">
                 게시글 삭제
             </a>
         </div>
@@ -66,16 +65,48 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
 
         <hr class="my-5">
 
-        <div class = "text-start">
+        <div class="text-start">
             <h3>
-            댓글달기
+                댓글달기
             </h3>
             {%include 'commentapp/create.html' %}
         </div>
 
+
+        {% for comment in target_article.comments.all %}
+        <div style="border: solid #CCC; border-radius: 2rem;"
+             class="my-2 p-3 text-start">
+            <div>
+                <p>
+                    <img style="width: 2.5rem; height: 2.5rem;
+                                border-radius: 50%; object-fit: cover;"
+                         src="{{ comment.writer.profile.image.url }}">
+                    <span class="mx-2">
+                        {{ comment.writer.profile.nickname }}
+                    </span>
+                    <span class="ms-5">
+                        {{ comment.created_at }}
+                    </span>
+                </p>
+            </div>
+
+            <div class="my-3">
+                {{ comment.content|linebreaks }}
+            </div>
+
+            {% if user == comment.writer %}
+            <div class="text-end">
+                <a href="{% url 'commentapp:update' pk=comment.pk "
+                   class="btn btn-success btn-sm rounded-pill px-4 py-0">
+                    댓글 수정
+                </a>
+            </div>
+            {% endif %}
+        </div>
+        {% endfor %}
+
+
     </div>
-
-
 
 
 </div>
