--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -6,7 +6,7 @@
 <style>
 
     .container div {
-  width: 280px;
+  width: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,13 +21,13 @@
 
 </style>
 
-<div style =my-5>
+<div style=my-5>
     <div class="container">
         {% for article in article_list %}
         <a href="{% url 'articleapp:detail' pk=article.pk %}">
-          <div class="item1">
-              <img src="{{ article.image.url }}"  alt ="">
-          </div>
+            <div class="item1">
+                <img src="{{ article.image.url }}" alt="">
+            </div>
         </a>
         {% endfor %}
     </div>
@@ -36,39 +36,39 @@
 
 <div class="text-center my-5">
     {% if page_obj.has_previous %}
-        <a href="?page={{ page_obj.previous_page_number }}"
-           class="btn btn-secondary rounded-pill">
-            {{ page_obj.previous_page_number }}
-        </a>
+    <a href="?page={{ page_obj.previous_page_number }}"
+       class="btn btn-secondary rounded-pill">
+        {{ page_obj.previous_page_number }}
+    </a>
     {% endif %}
-        <a href="#"
-           class="btn btn-dark rounded-pill">
-            {{ page_obj.number }}
-        </a>
+    <a href="#"
+       class="btn btn-dark rounded-pill">
+        {{ page_obj.number }}
+    </a>
     {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}"
-           class="btn btn-secondary rounded-pill">
-            {{ page_obj.next_page_number }}
-        </a>
+    <a href="?page={{ page_obj.next_page_number }}"
+       class="btn btn-secondary rounded-pill">
+        {{ page_obj.next_page_number }}
+    </a>
     {% endif %}
 </div>
 
 
-    <div class="my-5 text-center" style = "font-family: 'Gowun Batang', serif;
+<div class="my-5 text-center" style="font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
 
-        <a href ="{% url 'articleapp:create' %}"
-           class = "btn btn-dark rounded-pill px-4">
-            게시글 작성하기
-        </a>
-    </div>
+    <a href="{% url 'articleapp:create' %}"
+       class="btn btn-dark rounded-pill px-4">
+        게시글 작성하기
+    </a>
+</div>
 
 <script src="https://unpkg.com/magic-grid/dist/magic-grid.cjs.js"></script>
 <script>
     let magicGrid = new MagicGrid({
       container: '.container',
       animate: true,
-      gutter: 30,
+      gutter: 12,
       static: true,
       useMin: true
     });
