--- a/articleapp/templates/articleapp/create.html
+++ b/articleapp/templates/articleapp/create.html
@@ -5,25 +5,25 @@
 {% block content %}
 
 
-<div class = "my-5 text-center" style = "font-family: 'Gowun Batang', serif;
+<div class="my-5 text-center" style="font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
 
-    <div class = "my-5"></div>
+    <div class="my-5">
         <h1>
             게시글 작성하기
         </h1>
     </div>
 
-    <div style = "max-width: 900px; margin: auto; font-family: 'Gowun Batang', serif;
+    <div style="max-width: 900px; margin: auto; font-family: 'Gowun Batang', serif;
 font-family: 'IBM Plex Sans KR', sans-serif;">
-        <form action = "{% url 'articleapp:create' %}" method = "post" enctype="multipart/form-data">
+        <form action="{% url 'articleapp:create' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <button class ="btn btn-secondary rounded-pill px-4 my-5" type = "submit">
+            <button class="btn btn-secondary rounded-pill px-4 my-5" type="submit">
                 Submit
             </button>
         </form>
-    </divstyle>
+    </div>
 
 
 </div>
