unsubscribe update Commit

--- a/Accountapp/Templates/accountapp/detail.html
+++ b/Accountapp/Templates/accountapp/detail.html
@@ -51,11 +51,19 @@ font-family: 'IBM Plex Sans KR', sans-serif;">
         {% else %}
 
         <div>
+            {% if not subscribed %}
             <a href="{% url 'subscribeapp:sub' pk=target_user.pk %}">
                 <div class="btn btn-outline-success rounded-pill px-5 my-5">
                     구독하기
                 </div>
             </a>
+            {% else %}
+            <a href="{% url 'subscribeapp:sub' pk=target_user.pk %}">
+                <div class="btn btn-outline-danger rounded-pill px-5 my-5">
+                    구독 취소
+                </div>
+            </a>
+            {% endif %}
 
         </div>
         {% endif %}
